--- a/app/globals.scss
+++ b/app/globals.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #fcfbf8;
+  background-color: #f5f7fa;
   font-family: "Roboto";
   line-height: 1.5;
   margin: 0;
