--- a/components/ProjectComponent.module.scss
+++ b/components/ProjectComponent.module.scss
@@ -13,7 +13,7 @@
   width: 100%;
 }
 .header_container_text {
-  color: #343c6a;
+  color: black;
   font-size: 14px;
   font-weight: 600;
   line-height: normal;
