--- a/components/AsideBar.module.scss
+++ b/components/AsideBar.module.scss
@@ -7,19 +7,19 @@
   text-decoration: none;
   font-size: 25px;
   font-style: normal;
-
-  font-weight: 900;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  font-weight: 800;
   line-height: normal;
   transition: color 0.3s ease;
 
   @media screen and (min-width: 1400px) {
-    font-size: 48px;
   }
   @media screen and (min-width: 1200px) and (max-width: 1399px) {
-    font-size: 42px;
   }
   @media screen and (min-width: 992px) and (max-width: 1199px) {
-    font-size: 36px;
   }
 }
 
@@ -33,7 +33,7 @@
   width: 100%;
   min-height: 100vh;
   background: #fff;
-  padding: 18px 40px;
+  padding: 27px 40px;
   transition: all 300ms ease;
   border-right: 1px solid #e6eff5;
 }
@@ -74,4 +74,15 @@
 }
 .sidebar_items:hover .sidebar_link {
   color: #2d60ff;
+}
+.logo_icon_container {
+  background-image: url("../public/assets/logo-podcust.svg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 35px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
