--- a/components/AsideBar.module.scss
+++ b/components/AsideBar.module.scss
@@ -13,7 +13,7 @@
   gap: 5px;
   font-weight: 800;
   line-height: normal;
-  transition: color 0.3s ease;
+  transition: transform 0.3s ease;
 
   @media screen and (min-width: 1400px) {
   }
@@ -24,7 +24,7 @@
 }
 
 .navigation_link:hover {
-  color: #2d60ff;
+  transform: scale(1.05);
 }
 .sidebar_logo_container {
   margin-bottom: 60px;
